--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "live-server": "^1.2.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^8.0.1",
     "@types/node": "^12.12.14",
+    "fs-extra": "^8.1.0",
     "ts-loader": "^6.2.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.2",
@@ -21,13 +23,14 @@
   },
   "scripts": {
     "start-desktop": "live-server .",
+    "build": "npm run build-desktop && npm run build-bangle",
     "build-desktop": "npm run transpile-src-desktop",
-    "build-bangle": "npm run transpile-src-bangle && npm run transpile-bangle-build-script && npm run compile-bangle && npm run minify-bangle",
+    "build-bangle": "npm run transpile-src-bangle && npm run transpile-bangle-build-script && npm run compile-bangle && cp ./dist/bangle.js ./dist/bangle.min.js && npm run minify-bangle",
     "transpile-src-desktop": "webpack --config ./webpack.config.js",
     "transpile-src-bangle": "tsc -p ./tsconfig.json",
     "transpile-bangle-build-script": "tsc -p ./tsconfig-bangle-build.json",
     "compile-bangle": "node ./build-bangle.js",
-    "minify-bangle": "uglifyjs --toplevel --mangle reserved=[\"flip\",\"clear\",\"drawLine\",\"setPixel\",\"setLCDMode\",\"Bangle\",\"setFontAlign\",\"drawString\",\"getHeight\",\"read\"] --mangle-props keep_quoted,reserved=[\"flip\",\"clear\",\"drawLine\",\"setPixel\",\"setLCDMode\",\"Bangle\",\"setFontAlign\",\"drawString\",\"getHeight\",\"read\"] --output ./dist/bangle.min.js ./dist/bangle.js"
+    "minify-bangle": "uglifyjs --toplevel --mangle reserved=[\"flip\",\"clear\",\"drawLine\",\"setPixel\",\"setLCDMode\",\"Bangle\",\"setFontAlign\",\"drawString\",\"getHeight\",\"read\"] --mangle-props keep_quoted,reserved=[\"flip\",\"clear\",\"drawLine\",\"setPixel\",\"setLCDMode\",\"Bangle\",\"setFontAlign\",\"drawString\",\"getHeight\",\"read\"] --output=./dist/bangle.min.js ./dist/bangle.min.js"
   },
   "keywords": [
     "bangle",
@@ -38,5 +41,3 @@
   "author": "Bert Verhelst",
   "license": "ISC"
 }
-
-
